# finwise

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.sisyphus/plans/: eng-review-todos.md
docs/adr/: 001-tech-stack.md  002-llm-integration.md  003-data-storage.md  004-file-upload-formats.md  005-deployment-configuration.md
docs/specs/: 2026-04-21-finwise-phase1-design.md
migrations/: env.py
migrations/versions/: 77947f15140f_initial_schema.py  9bba6aa2205f_initial_schema.py
src/: config.py  database.py  dependencies.py  main.py
src/models/: __init__.py  chat_session.py  message.py  payee_mapping.py  pending_transaction.py  settings.py  sync_log.py
src/parsers/: __init__.py  csv_xlsx.py  image.py  ofx.py  text.py
src/routers/: __init__.py  chat.py  pages.py  settings.py  setup.py  transactions.py  upload.py
src/schemas/: __init__.py  chat.py  settings.py  transaction.py  upload.py
src/services/: actual_budget.py  bookkeeper.py  encryption.py  learning.py  llm_client.py  stream_processor.py  sync_worker.py  upload_orchestrator.py
src/templates/: __init__.py  base.html
src/templates/pages/: chat.html  history.html  settings.html  setup.html
src/templates/partials/: bulk_confirm_result.html  chat_message.html  transaction_card.html  upload_result.html
src/utils/: dedup.py
static/css/: dist.css  main.css
static/js/: sse.js  theme.js
tests/: conftest.py  test_health.py
tests/unit/: test_encryption.py  test_models.py
